# chat-app

./: .gitignore  pyproject.toml
notebooks/: azure-5-memory.ipynb  azure-openai-memorychat.ipynb  azure-openai-rag.ipynb  azure-openai-test.ipynb  cli-test.ipynb  filldb.ipynb  final.ipynb
src/chatapp/: __main__.py  memory_chat.py  simple_chat.py
src/chatapp/utils/: __main__.py  hello.py
src/ui/: memory-chatapp.py  rag-memoryapp.py  ragapp.py  streamlit-app.py
